<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<!-- Datos de Operando 1 -->    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oper1" />
    
    <EditText
        android:id="@+id/ET_Oper1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:inputType="numberDecimal|numberSigned"/>
        
<!-- Datos de Operando 2 -->    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oper2" />
    
    <EditText
        android:id="@+id/ET_Oper2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:inputType="numberDecimal|numberSigned" />

<!-- Botones con las operaciones disponibles -->    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal" >
    	
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/suma"
	        android:tag="+" 
	        android:onClick="ejecuta"/>
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/resta" 
	        android:tag="-"
	        android:onClick="ejecuta"/>
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/multi"
	        android:tag="*" 
	        android:onClick="ejecuta"/>
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/divi" 
	        android:tag="/"
	        android:onClick="ejecuta"/>
    </LinearLayout>

</LinearLayout>
